--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "faktacak-v2",
+  "name": "random-fact-generator",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "build": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "googleapis": "^140.0.1",
-    "serverless-http": "^3.2.0"
+    "base-64": "^1.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "googleapis": "^39.2.0",
+    "serverless-http": "^2.3.2",
+    "ejs": "^3.1.6"
   }
 }
