--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "base-64": "^1.0.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "googleapis": "^100.0.0", 
-    "serverless-http": "^2.3.2",
-    "ejs": "^3.1.6"
+    "express-session": "^1.18.0",
+    "googleapis": "^100.0.0",
+    "serverless-http": "^2.3.2"
   }
 }
